[package]
name = "sandboxed-regexp"
version = "0.3.0"
authors = ["The Firefox Accounts Team <dev-fxacct@mozilla.org>"]
edition = "2018"
license = "MPL-2.0"
repository = "https://github.com/mozilla/sandboxed-regexp"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen="0.2"
regex="1.3.4"
once_cell="1.3.1"
